2003-04-10  Zoltan Varga  <vargaz@freemail.hu>

	* object.c (mono_array_new): Mark mono_array_new as an icall.

2003-04-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* class.c: fixed test for public method when overriding interfaces.
	Closes bug #40970.

Wed Apr 9 15:19:41 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* appdomain.h, domain.c: added mono_domain_foreach() to
	be able to access the currently loaded appdomains.
	* object.c: make string interning work across sppdomains.
	Mark some functions for use as icalls.

2003-04-09  Zoltan Varga  <vargaz@freemail.hu>

	* class.c reflection.c: Fix memory leaks reported by ccmalloc.

	* reflection.h reflection.c: Allocate long living data using 
	GC_MALLOC_ATOMIC so the collector does not need to scan it.

	* reflection.c: Double the allocation size in streams instead of
	increasing it, to prevent unneccesary copying on large assemblies.
	
	* reflection.c (mono_reflection_create_runtime_class): Avoid vtable
	creation if the assembly does not have the Run flag set.

Tue Apr 8 11:19:53 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* class.h: avoid the C++ keywords in header files (Jerome Laban
	spotted and fixed this).

2003-04-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* object.c:
	(mono_unhandled_exception): fill in the arguments for the
	UnhandledException event. Only trigger that event for the default
	domain (as MS does).

2003-04-04  Zoltan Varga  <vargaz@freemail.hu>

	* object.c: Improve typed allocation stuff based on suggestions from
	Paolo. Also turn it on if the GC library supports it.

2003-04-03  Zoltan Varga  <vargaz@freemail.hu>

	* object.c object.h class.h: Added experimental typed allocation
	facility using the interfaces in gc_gcj.h.

	* os/gc_wrapper.h: Added new include files.
	
2003-04-03  Martin Baulig  <martin@ximian.com>

	All the following changes are conditional to `WITH_INCLUDED_LIBGC'
	which is not yet enabled by default.
