@@ -232,4 +232,8 @@ ves_icall_System_AppDomain_InternalSetContext	   (MonoAppContext *mc);
 gint32 
 ves_icall_System_AppDomain_GetIDFromDomain (MonoAppDomain * ad);
 
+MonoString *
+ves_icall_System_AppDomain_InternalGetProcessGuid (MonoString* newguid);
+
+
 #endif /* _MONO_METADATA_APPDOMAIN_H_ */
