@@ -1,3 +1,8 @@
+2003-04-10  Lluis Sanchez Gual  <lluis@ideary.com>
+
+	* appdomain.c,appdomain.h,icall.c: Added internal method that returns the process guid
+	* object.c: fixed bug in the construction of vtable for proxies
+
 2003-04-10  Zoltan Varga  <vargaz@freemail.hu>
 
 	* object.c (mono_array_new): Mark mono_array_new as an icall.
